tests/invalid_nodepend/bug115.err_exp
bug115.m:012: Syntax error: Illegal character 0xE8 (232) in input.
bug115.m:020: Syntax error: Illegal character 0xE8 (232) in input.
